--- a/Configs/requirements.txt
+++ b/Configs/requirements.txt
@@ -2,4 +2,5 @@ pyinstaller>=3.1
 futures
 nose
 mock
+psutil
 git+https://github.com/overfl0/mockfs@crude_windows # Mockfs patched to work on windows
