--- a/Configs/requirements.txt
+++ b/Configs/requirements.txt
@@ -2,6 +2,7 @@ pyinstaller>=3.1
 futures
 nose
 mock
+psutil
 git+https://github.com/overfl0/mockfs@crude_windows # Mockfs patched to work on windows
 
 # Kivy requirements
