--- a/Configs/requirements.txt
+++ b/Configs/requirements.txt
@@ -6,17 +6,19 @@ psutil
 git+https://github.com/overfl0/mockfs@crude_windows # Mockfs patched to work on windows
 
 # Kivy requirements
-wheel
-setuptools<19.3
-docutils
-pygments
-pypiwin32
-kivy.deps.sdl2
-kivy.deps.glew
-kivy==1.9.1
+# Removed for now because we're building Kivy from source
+#wheel
+#setuptools<19.3
+#docutils
+#pygments
+#pypiwin32
+#kivy.deps.sdl2
+#kivy.deps.glew
+#kivy==1.9.1
 
 # Message from Vagrant provision
 # ==> default: Successfully installed Kivy-Garden-0.1.4 docutils-0.12 funcsigs-0.4 futures-3.0.4 kivy-1.9.1 kivy.deps.glew-0.1.4 kivy.deps.sdl2-0.1.12 mock-1.3.0 mockfs-1.0.2 nose-1.3.7 pbr-1.8.1 pygments-2.1 pyinstaller-3.1 pypiwin32-219 requests-2.9.1 setuptools-19.2 six-1.10.0 wheel-0.26.0
 
+pathlib2==2.1.0  # For ipython
 ipython     # For development
 pyreadline  # For development (better ipython integration on windows)
